[package]
name = "ruster"
version = "1.0.0"
edition = "2021"
description = "Shared C library implementing simple and powerful logging interface"
license = "MIT"

[lib]
name = "ruster"         # The name of the target.
path = "lib/ruster.rs"  # The source file of the target.
test = true             # Is tested by default.
doctest = true          # Documentation examples are tested by default.
bench = true            # Is benchmarked by default.
doc = true              # Is documented by default.
plugin = false          # Used as a compiler plugin (deprecated).
proc-macro = false      # Set to `true` for a proc-macro library.
harness = true          # Use libtest harness.
edition = "2021"        # The edition of the target.
crate-type = ["cdylib", "staticlib", "lib"]  # The crate types to generate '.a', '.so' and '.rlib' extensions
required-features = []

[dependencies]
libc = "0.2.2"
env_logger = "0.8.4"
log = "0.4.14"