[package]
name = "libruster"
author = "pierre.baconnier@outlook.fr"
version = "1.1.1"
edition = "2021"
description = "Ruster is a library using ffi for database management with psql/pg_dump + mysql/mysqldump that can be used in other languages like Golang"
license = "MIT"
repository = "https://github.com/e-monkeys-tech/ruster"
documentation = "https://docs.rs/ruster/1.1.1/ruster/"

[lib]
name = "libruster"         # The name of the target.
path = "lib/ruster.rs"  # The source file of the target.
test = true             # Is tested by default.
doctest = true          # Documentation examples are tested by default.
bench = true            # Is benchmarked by default.
doc = true              # Is documented by default.
plugin = false          # Used as a compiler plugin (deprecated).
proc-macro = false      # Set to `true` for a proc-macro library.
harness = true          # Use libtest harness.
edition = "2021"        # The edition of the target.
crate-type = ["cdylib", "staticlib", "lib"]  # The crate types to generate '.a', '.so' and '.rlib' extensions
required-features = []

[dependencies]
libc = "0.2.2"
env_logger = "0.8.4"
log = "0.4.14"